Skeletal model changed to include finger bones. Sensor classes for Leap skeleton-d. Makefiles updated

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -3,7 +3,9 @@ TODO:
 Imm:
 
 Carmine:
- - Refactor to meet new data passign paradigm
+
+Leap:
+ - Ya know - get library compiling
 
 Ideas:
  - Timestamp back from sensor classor
