--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,14 +1,21 @@
 TODO:
 
 Imm:
- - when using default joint positions, transform by known joints so defaults move
- 	+ (Default World Position) -> (parent space Position) -> offset by new parent position
- - OR MAYBE USE BONES?
+ - Add functionality to data fusion base class from LCFuser
+   + finish addSensor pathway
+ - Create data filter base class
+ - Refactor fuser to operate on bones
+ - Refactor filter to operate on bones
+ - DataFusionModule::getBonesFromJoints()
+ - Data Fuser interpolate between conflicting positions
+
+Possibly:
+ - Make data send to fusion asynchronous
+
 
 Carmine:
 
 Leap:
- - Bring in fingers
 
 Ideas:
  - Timestamp back from sensor classor
