--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,8 +1,7 @@
 TODO:
 
 Imm:
- - Fix resolution from two bones
- - Allow lookback to do two bone resolution on 0 conf in best skeleton
+ - Allow history lookback to sync fusion
  - Implement hand swap
 
 Carmine:
